--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+.idea
+.vscode
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.DS_Store
+
 # Logs
 logs
 *.log
