--- a/package.json
+++ b/package.json
@@ -17,34 +17,28 @@
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@types/express": "^4.17.21",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
-    "app-root-path": "^3.1.0",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "html-webpack-plugin": "^5.6.0",
-    "nodemon": "^3.0.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^7.0.0",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-config": "^5.1.1",
     "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8",
     "zustand": "^4.5.0"
