--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
   "rules": {
     "react/prop-types": "off",
     "react/display-name": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-var-requires": "off"
   },
   "settings": {
     "react": {
