--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "paths": {
+      "test-utils": ["./test-utils/test-utils"]
+    }
   },
-  "include": ["src", "src/declarations.d.ts"]
+  "include": ["src", "src/declarations.d.ts"],
+  "exclude": ["node_modules", "config", "public", "coverage"]
 }
